<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Leaf Explorer</string>
    <string name="leaf_explorer" translatable="false">Leaf Explorer</string>
    <string name="text_leaf_share" translatable="false">Leaf Share</string>
    <string name="open_navigation_drawer">Open Navigation Drawer</string>
    <string name="close_navigation_drawer">Close Navigation Drawer</string>
    <string name="preferences">Preferences</string>
    <string name="receive_file_question">Receive the file?</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="stop">Stop</string>
    <string name="sending">Sending</string>
    <string name="cancel_sending">Cancel Sending</string>
    <string name="receiving">Receiving</string>
    <string name="cancel_receiving">Cancel Reception</string>
    <string name="receive_file_success">%s has been received</string>
    <string name="empty_list">The list is empty</string>
    <string name="nickname_description">The name that will appear on other clients</string>
    <string name="send_file_failure">Could not send \"%s\"</string>
    <string name="receive_file_failure">Could not receive \"%s\"</string>
    <string name="receive_files_success">Files received</string>
    <string name="preferences_reset">Reset Settings</string>
    <string name="preferences_reset_question">Reset all settings?</string>
    <string name="choose_sharing_app">Share with…</string>
    <string name="received_files">Received Files</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="deletion_confirmation">Confirm Deletion</string>
    <string name="cancel">Cancel</string>
    <string name="mount">Mount</string>
    <string name="mount_dialog">Write access to external memory card</string>
    <string name="mount_dialog_info">One time acton is needed to get writing access to your external memory card.\n\n Please click Mount to proceed.\n\n You will get dialog similar to this:</string>
    <string name="mount_note">Leaf Explorer will get needed access for now and future.</string>
    <string name="refresh">Refresh</string>
    <string name="about">About</string>
    <string name="close">Close</string>
    <string name="unknown_failure">Something went wrong</string>
    <string name="advanced">Advanced</string>
    <string name="storage_path">Storage Path</string>
    <string name="path_unavailable_notice">The path \'%s\' is unavailable</string>
    <string name="stopping">Stopping</string>
    <string name="notification">Notification</string>
    <string name="notifications_use_sounds">Sounds</string>
    <string name="notifications_use_sounds_summary">Use sounds</string>
    <string name="notifications_use_vibration">Vibration &amp; Heads-up Notifications</string>
    <string name="notifications_use_vibration_summary">Use vibration and show heads-up notifications</string>
    <string name="notifications_use_lights">Lights</string>
    <string name="notifications_use_lights_summary">Use lights</string>
    <string name="app">App</string>
    <string name="music">Music</string>
    <string name="video">Video</string>
    <string name="show_system_apps">Show System Apps</string>
    <string name="error_not_allowed">You are not allowed (you may be blocked)</string>
    <string name="multi_selection">Multi Selection</string>
    <string name="receive">Receive</string>
    <string name="block">Block</string>
    <string name="launch">Launch</string>
    <string name="launch_question">Do you want to launch this app?</string>
    <string name="launch_app_failure">This app cannot be launched</string>
    <string name="enter_text_notice">Enter text here…</string>
    <string name="copy_text_to_clipboard_success">Text copied to clipboard</string>
    <string name="copy_to_clipboard_question">Copy to clipboard?</string>
    <string name="receive_text_success">Text received</string>
    <string name="receive_text_summary_success">Received clipboard text</string>
    <string name="type_text_notice">Type something to send…</string>
    <string name="text_editor">Text Editor</string>
    <string name="done">Done</string>
    <string name="empty_text">empty</string>
    <string name="wifi_settings">Wi-Fi</string>
    <string name="proceed">Proceed</string>
    <string name="remove_transfer_question">Remove transfer?</string>
    <string name="remove">Remove</string>
    <string name="remove_all">Remove All</string>
    <string name="remove_client_question">Remove client?</string>
    <string name="remove_client_notice">Removing a client also removes the data related to it</string>
    <string name="remove_all_question">Remove all?</string>
    <string name="folder">Folder</string>
    <string name="organizing_files_notice">Organizing files…</string>
    <string name="error">Error</string>
    <string name="double_click_exit_notice">Press again to exit</string>
    <string name="create">Create</string>
    <string name="create_folder">Create Folder</string>
    <string name="error_file_already_exists">File already exists</string>
    <string name="create_folder_failure">Folder could not be created</string>
    <string name="storage_permission_summary">This permission allows Leaf Explorer to read and write to your device\'s
        storage for receiving and sharing files.
    </string>
    <string name="settings">Settings</string>
    <string name="default_folder">Default Folder</string>
    <string name="text_storage">Storage</string>
    <string name="change_storage_path_success">The directory has been changed</string>
    <string name="status">Status</string>
    <string name="resume">Resume</string>
    <string name="transfer_details">Transfer Details</string>
    <string name="choose_folder">Choose Folder</string>
    <string name="choose_file">Choose File</string>
    <string name="show">Show</string>
    <string name="preparing_files">Preparing Files</string>
    <string name="version">Version</string>
    <string name="pending">Pending</string>
    <string name="running">Running</string>
    <string name="interrupted">Interrupted</string>
    <string name="unknown">Unknown</string>
    <string name="long_ago">Long ago</string>
    <string name="wifi_direct">Wi-Fi Direct</string>
    <string name="wifi">Wi-Fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="ethernet">Ethernet</string>
    <string name="unknown_interface">Unknown Connection</string>
    <string name="retry_receiving">Retry Receiving</string>
    <string name="request">Request</string>
    <string name="storage_permission">Storage Permission</string>
    <string name="media_directory">Media Directory</string>
    <string name="insufficient_space_notice">Not enough space</string>
    <string name="removed">Removed</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="service_running_notice">Leaf Explorer can share files now</string>
    <string name="remaining_time">ETA %s</string>
    <string name="show_files">Show Files</string>
    <string name="trust">Trust</string>
    <string name="download">Download</string>
    <string name="update_clipboard_notice">Revise the text or press again to exit</string>
    <string name="save_clipboard_notice">Save the text or press again to exit</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="just_now">Just now</string>
    <string name="error_hotspot_needs_permission">Leaf Explorer needs permission to set up a hotspot</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="set_up_hotspot_mobile_data_notice">Connected devices may use cellular data. You may want to turn
        it off.
    </string>
    <string name="skip">Skip</string>
    <string name="enable">Enable</string>
    <string name="location_settings">Location</string>
    <string name="starting_hotspot_notice">Stopping hotspot</string>
    <string name="stopping_hotspot_notice">Starting hotspot</string>
    <string name="check">Check</string>
    <string name="uncheck">Uncheck</string>
    <string name="client_not_supported_notice">This client uses a version that is no longer supported!</string>
    <string name="select_all">Select All</string>
    <string name="select_none">Select None</string>
    <string name="preview_selections">Preview Selections</string>
    <string name="retry_receiving_notice">Leaf Explorer will retry receiving interrupted transfers</string>
    <string name="set_up">Set Up</string>
    <string name="location">Location</string>
    <string name="received_size">Received Size</string>
    <string name="save_file_success">File saved</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_order">Sort Order</string>
    <string name="ascending">Biggest First ↑</string>
    <string name="descending">Smallest First ↓</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="size">Size</string>
    <string name="preferences_reset_notice">This will restore default settings</string>
    <string name="deleting_files_notice">Deleting files</string>
    <string name="ongoing_task">Ongoing Task</string>
    <string name="high_priority_notifications">Important Notifications</string>
    <string name="low_priority_notifications">Low Priority Notifications</string>
    <string name="receive_success_summary">Received %s in %s</string>
    <string name="count_years_short">%d yr</string>
    <string name="count_months_short">%d mth</string>
    <string name="count_days_short">%d dy</string>
    <string name="count_hours_short">%d hr</string>
    <string name="count_minutes_short">%d min</string>
    <string name="count_seconds_short">%d sec</string>
    <string name="exit">Exit</string>
    <string name="empty_files_list">No files here</string>
    <string name="empty_photos_list">No photos here</string>
    <string name="empty_apps_list">No apps here</string>
    <string name="empty_video_list">No videos here</string>
    <string name="empty_writings_list">Writings will appear here</string>
    <string name="empty_music_list">No songs in here</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="emulated_media_directory">Emulated (%s)</string>
    <string name="empty_search_result_summary">No result for \"%s\"</string>
    <string name="access_failure_notice">Cannot access \"%s\"</string>
    <string name="scan_qr_code_notice">Scan this code to share on the other client</string>
    <string name="scanner_qr_code_notice">Align the QR code scanner with the box</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="rename">Rename</string>
    <string name="home">Home</string>
    <string name="donate">Support Us</string>
    <string name="retry">Retry</string>
    <string name="changelog">Changelog</string>
    <string name="transfers">Transfers</string>
    <string name="web_share">Web Share</string>
    <string name="crash_report">Crash Report</string>
    <string name="selections">Selections</string>
    <string name="app_folder">App Folder</string>
    <string name="copy_to">Copy to</string>
    <string name="move_to">Move to</string>
    <string name="file_details">Details</string>
    <string name="add_favorites">Add to favorites</string>
    <string name="share_external">Share with other apps</string>
    <string name="details">Details</string>
    <string name="replace">Replace</string>
    <string name="replaceAll">Replace All</string>
    <string name="skipAll">Skip All</string>
    <string name="show_hidden_files">Show hidden files</string>
    <string name="action_archive">Create ZIP</string>
</resources>