<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2021 Veli Tasalı
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 2
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  -->

<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/selections"
        android:title="@string/selections"
        android:orderInCategory="1"
        android:enabled="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/leafShare"
        android:title="@string/text_leaf_share"
        android:icon="@drawable/ic_round_send_24"
        android:orderInCategory="2"
        android:enabled="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/rename"
        android:title="@string/rename"
        android:icon="@drawable/ic_edit_white_24dp"
        android:orderInCategory="3"
        android:enabled="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/create_folder"
        android:title="@string/create_folder"
        android:icon="@drawable/ic_folder_white_24dp"
        app:showAsAction="always"
        android:orderInCategory="4"/>

    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="5"
        android:enabled="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/copy"
        android:title="@string/copy_to"
        android:icon="@drawable/ic_content_copy_white_24dp"
        android:orderInCategory="6"
        android:enabled="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/move"
        android:title="@string/move_to"
        android:icon="@drawable/ic_content_copy_white_24dp"
        android:orderInCategory="7"
        android:enabled="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionArchive"
        android:title="@string/action_archive"
        android:icon="@drawable/ic_zip_box_white_24dp"
        android:orderInCategory="8"
        android:enabled="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/share_external"
        android:title="@string/share_external"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="9"
        android:enabled="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/detail"
        android:title="@string/file_details"
        android:icon="@drawable/ic_info_white_24dp"
        android:orderInCategory="10"
        android:enabled="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favorites"
        android:title="@string/add_favorites"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:orderInCategory="11"
        android:enabled="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/show_hidden_files"
        android:title="@string/show_hidden_files"
        android:checkable="true"
        android:orderInCategory="13"
        app:showAsAction="ifRoom"/>

</menu>
