<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2021 Veli Tasalı
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 2
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/locations_home"
        android:orderInCategory="1">

        <item
            android:id="@+id/explorer_home"
            android:title="@string/home"
            app:icon="@drawable/ic_home_white_24dp" />

    </group>

    <group
        android:id="@+id/locations_storage"
        android:orderInCategory="2" />

    <group
        android:id="@+id/locations_default"
        android:orderInCategory="3">

        <item
            android:id="@+id/app_folder"
            android:title="@string/app_folder"
            app:icon="@drawable/ic_folder_white_24dp" />

        <item
            android:id="@+id/default_app_folder"
            android:title="@string/default_folder"
            app:icon="@drawable/ic_folder_white_24dp" />

    </group>
</menu>
